# automix

./: .gitignore  CMakeLists.txt  README.md
src/: analyzer.cpp  analyzer.h  automix.cpp  recorder.h  track.h
